kube-deploy.yaml

apiVersion: v1
kind: Service
metadata:
  name: reservieren-extern
  namespace: bibliothek
spec:
  ports:
  - port: 8080
    name: web
  selector:
    app: reservieren
    role: backend
    scs: reservieren
    
---

## Für das interne SSE Interface
apiVersion: v1
kind: Service
metadata:
  name: reservieren-intern
  namespace: bibliothek
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: reservieren
    role: backend
    scs: reservieren    

---

#####
# ingress to assets, test f.e. with
# curl http://bootcamp.ch.innoq.io/einbuchen/books
#####

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  name: reservieren
  namespace: bibliothek
spec:
  rules:
  - host: bootcamp.ch.innoq.io
    http:
      paths:
      - path: /reservieren
        backend:
          serviceName: reservieren-extern
          servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reservieren
  namespace: bibliothek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservieren
      role: backend
      scs: reservieren
  template:
    metadata:
      labels:
        app: reservieren
        role: backend
        scs: reservieren
    spec:
      containers:
      - name: varnish-ssi
        image: quay.io/containerbootcamp/alpine-varnish
      - name: reservieren
        image: quay.io/containerbootcamp/reservieren
        ports:
        - containerPort: 80
          protocol: TCP
      - name: jaeger-agent
        image: jaegertracing/jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        command:
        - "/go/bin/agent-linux"
        - "--collector.host-port=jaeger-collector.tracing:14267"
      volumes:
      - name: reservieren-init-scripts
        configMap:
          name: reservieren-pg-init-scripts
